# OpenMEEG_lib

./: .travis.yml  CMakeLists.txt  README.md  appveyor.yml
.continuous_integration/: InstallMKL.cmake
OpenMEEG/src/: CMakeLists.txt
cmake/: BlasLapackOption.cmake  FindMKL.cmake  UseMKL.cmake
